--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "prebuild":"npm run build",
-    "build":"gh-pages -d build",
+    "build":"npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
